* Ensure IE String#replace converts null/undefined return values to string `null`/`undefined` and add more unit tests for String#replace, String#gsub, and String#sub. [jddalton, Michael Hollauf, Samuel Lebeau]

* Add Hash#toArray and properties _prairs, _keys, and _values to optimize methods iterating over the internal hash object. [jddalton]

* Add support for Mozilla's Object#__count__ property in Object.isEmpty(). [Andreas Ecker, jddalton, Nicholas Zakas]

* Optimize Number#times by forking for `thisArg` and cleanup Try.these() and ObjectRange#_each. [jddalton]

* Optimize Array#contains and Enumerable.contains() by forking for strict or loose matches. [jddalton]

* Give Object.inspect() the ability to process Object objects. [Prototype LH #638] [Evil.2000, jddalton]

* Hash API updates and optimizations. [FuseJS LH #17] [jddalton, Joe Gornick]
  Note: Backwards compatibility warning.
   - Renamed methods: include -> contains
   - Removed methods: reject, update
   - Removed aliases: findAll, index, select, toTemplateReplacements

   - Updated methods:
     Hash#contains: Added a strict parameter for strict comparisons.
     Hash#set: Updated to accept either key/value arguments or an object/Hash.
     Hash#unset: Updated to accept either an array of keys or arguments of keys.

   - Added methods:
     Hash#clear
     Hash#first: Added proper `first` support to Hash.
      * first(n): Returns an array containing the first n of the list.
      * first(callback, [thisArg]): Returns the first item when the callback returns true.
     Hash#last: Added proper `last` support to Hash.  Same as Hash#first, but starts from end.
     Hash#map: Added proper `map` support to Hash.

* Ensure Fuse determines the correct element to get page scroll data from. [jddalton]

* Fix Chrome's broken String#replace that returns the wrong results for global empty pattern matches with functions as replacements. [jddalton]
